...
                    Padding(
                      padding: const EdgeInsets.symmetric(horizontal: 20),
                      child: Row(
                        crossAxisAlignment: CrossAxisAlignment.start,
                        children: [
                          Text(
                            'Welcome !',
                            style: TextStyle(
                                fontSize: 36, fontWeight: FontWeight.bold),
                          ),
                        ],
                      ),
                    ),
...
                                    child: Row(
                                      crossAxisAlignment:
                                          CrossAxisAlignment.start,
                                      children: [
                                        Expanded(
                                          child: Text(
                                            'Enter the activation code you received via SMS.',
                                            style: TextStyle(fontSize: 18),
                                          ),
                                        ),
                                        IconButton(
                                          icon: Icon(Icons.info),
                                          onPressed: () {},
...
