...
                                      child: Row(
                                        crossAxisAlignment:
                                            CrossAxisAlignment.start,
                                        children: [
                                          Expanded(
                                            child: Text(
                                              'Enter your mobile number to activate your account.',
                                              style: TextStyle(fontSize: 18),
                                              maxLines: null,
                                            ),
                                          ),
                                          IconButton(
                                            icon: Icon(Icons.info),
...
